[gd_scene format=3 uid="uid://bvcud62dcxpx2"]

[ext_resource type="Script" uid="uid://dd6xp7wdugh68" path="res://scripts/shop.gd" id="1_xfvoa"]
[ext_resource type="Texture2D" uid="uid://c16wsu4a2dm1t" path="res://IMGS/baka.png" id="2_032fp"]
[ext_resource type="Texture2D" uid="uid://dwtfoy63rjogt" path="res://IMGS/ui/upgrade/hp.png" id="3_032fp"]
[ext_resource type="Texture2D" uid="uid://db8a0xthxi382" path="res://IMGS/ui/upgrade/pipe.png" id="4_2fc2m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xfvoa"]
radius = 245.00204

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1l46r"]
size = Vector2(233.5, 230)

[node name="Area2D" type="Area2D" unique_id=833320345]
script = ExtResource("1_xfvoa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1079890109]
shape = SubResource("CircleShape2D_xfvoa")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=482533023]
scale = Vector2(0.33119202, 0.30856323)
texture = ExtResource("2_032fp")

[node name="StaticBody2D" type="StaticBody2D" parent="." unique_id=1907545969]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" unique_id=1234104252]
position = Vector2(6, 2)
shape = SubResource("RectangleShape2D_1l46r")

[node name="Label" type="Label" parent="." unique_id=72443723]
offset_left = -167.0
offset_top = -106.0
offset_right = -26.0
offset_bottom = -57.0
text = "press e to interact
"

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=279044118]

[node name="ItemList" type="ItemList" parent="CanvasLayer" unique_id=279044117]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -404.5
offset_top = -320.0
offset_right = 404.5
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 94
item_count = 2
same_column_width = true
icon_mode = 0
icon_scale = 8.0
item_0/text = "HP-$500"
item_0/icon = ExtResource("3_032fp")
item_1/text = "Pipe range-$500"
item_1/icon = ExtResource("4_2fc2m")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="item_clicked" from="CanvasLayer/ItemList" to="." method="_on_item_list_item_clicked"]
